compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__record_update_unknown_variant.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Wibble {\n  Wibble(wibble: Int, wubble: Bool)\n  Wobble(wobble: Int, wubble: Bool)\n}\n\npub fn wibble(value: Wibble) {\n  Wibble(..value, wubble: True)\n}\n"
---
error: Unsafe record update
  ┌─ /src/one/two.gleam:8:3
  │
8 │   Wibble(..value, wubble: True)
  │   ^^^^^^ I can't tell this is always the right constructor

This type has multiple constructors so it cannot be safely updated. If
this value was one of the other variants then the update would be produce
incorrect results.

Consider pattern matching on it with a case expression and then
constructing a new record with its values.
